<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                android:id="@+id/textview_updated"
                style="@style/BlackText.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                apps:layout_constraintEnd_toEndOf="parent"
                apps:layout_constraintTop_toTopOf="parent"
                tools:text="Last updated : March 20, 2021" />

            <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                android:id="@+id/textview_situation"
                style="@style/BlackText.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/fragment_country_detail_tv_situation"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintTop_toBottomOf="@+id/textview_updated" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_cases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                apps:cardCornerRadius="8dp"
                apps:contentPadding="8dp"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintTop_toBottomOf="@+id/textview_situation">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                        android:id="@+id/textview_cases"
                        style="@style/BlackText.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_country_detail_tv_cases"
                        apps:layout_constraintStart_toStartOf="parent"
                        apps:layout_constraintTop_toTopOf="parent" />

                    <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                        android:id="@+id/textview_cases_value"
                        style="@style/BlackText.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        apps:layout_constraintEnd_toEndOf="parent"
                        apps:layout_constraintStart_toStartOf="parent"
                        apps:layout_constraintTop_toBottomOf="@+id/textview_cases"
                        tools:text="100" />

                    <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                        android:id="@+id/textview_today_cases_value"
                        style="@style/BlackText.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        apps:layout_constraintEnd_toEndOf="parent"
                        apps:layout_constraintStart_toStartOf="parent"
                        apps:layout_constraintTop_toBottomOf="@+id/textview_cases_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_recovered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                apps:cardCornerRadius="8dp"
                apps:contentPadding="8dp"
                apps:layout_constraintEnd_toStartOf="@+id/cardview_deaths"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintTop_toBottomOf="@+id/cardview_cases">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                        android:id="@+id/textview_recovered"
                        style="@style/BlackText.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_country_detail_tv_recovered"
                        apps:layout_constraintStart_toStartOf="parent"
                        apps:layout_constraintTop_toTopOf="parent" />

                    <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                        android:id="@+id/textview_recovered_value"
                        style="@style/BlackText.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        apps:layout_constraintEnd_toEndOf="parent"
                        apps:layout_constraintStart_toStartOf="parent"
                        apps:layout_constraintTop_toBottomOf="@+id/textview_recovered" />

                    <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                        android:id="@+id/textview_today_recovered_value"
                        style="@style/BlackText.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        apps:layout_constraintEnd_toEndOf="parent"
                        apps:layout_constraintStart_toStartOf="parent"
                        apps:layout_constraintTop_toBottomOf="@+id/textview_recovered_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_deaths"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                apps:cardCornerRadius="8dp"
                apps:contentPadding="8dp"
                apps:layout_constraintEnd_toEndOf="parent"
                apps:layout_constraintStart_toEndOf="@+id/cardview_recovered"
                apps:layout_constraintTop_toBottomOf="@+id/cardview_cases">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                        android:id="@+id/textview_deaths"
                        style="@style/BlackText.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_country_detail_tv_deaths"
                        apps:layout_constraintStart_toStartOf="parent"
                        apps:layout_constraintTop_toTopOf="parent" />

                    <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                        android:id="@+id/textview_deaths_value"
                        style="@style/BlackText.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        apps:layout_constraintEnd_toEndOf="parent"
                        apps:layout_constraintStart_toStartOf="parent"
                        apps:layout_constraintTop_toBottomOf="@+id/textview_deaths" />

                    <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                        android:id="@+id/textview_today_deaths_value"
                        style="@style/BlackText.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        apps:layout_constraintEnd_toEndOf="parent"
                        apps:layout_constraintStart_toStartOf="parent"
                        apps:layout_constraintTop_toBottomOf="@+id/textview_deaths_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                android:id="@+id/textview_provinces"
                style="@style/BlackText.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/fragment_country_detail_tv_provinces"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintTop_toBottomOf="@+id/cardview_deaths" />

            <com.kvsoftware.dependencyinjectionhilt.presentation.widget.DIHiltTextView
                android:id="@+id/textview_provinces_not_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/fragment_country_detail_tv_provinces_not_found"
                android:visibility="gone"
                apps:layout_constraintEnd_toEndOf="parent"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintTop_toBottomOf="@+id/textview_provinces" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_provinces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                apps:layout_constraintTop_toBottomOf="@+id/textview_provinces" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        apps:layout_constraintBottom_toBottomOf="parent"
        apps:layout_constraintEnd_toEndOf="parent"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>